[tool.poetry]
name = "fastbt"
version = "0.3.0"
description = "A backtesting framework for simple and dirty backtesting"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python >= "3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
